--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: node_js
 sudo: false
 node_js:
-  - '5.5'
+  - '6'
+
+cache:
+  directories:
+    - node_modules
 
 notifications:
   slack:
@@ -12,5 +16,5 @@ notifications:
   email: false
 
 after_success:
-    - coveralls
+    - "cat coverage/lcov.info | ./node_modules/.bin/coveralls"
 
