--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "1.0.0",
   "description": "AngularJS Web Interface",
   "scripts": {
-    "start": "webpack-dev-server --inline --progress --port 8080",
+    "start": "concurrently \"npm run  build:w\" \"npm run lite\"",
+    "bundle": "node bundle.js",
+    "bundle:prod": "node bundle.js --prod",
+    "lite": "lite-server",
+    "build": "tsc",
+    "build:w": "tsc --watch",
+    "typings": "typings install moment --save",
     "test": "karma start && npm run coveralls",
-    "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
     "postinstall": "typings install",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
@@ -17,27 +22,19 @@
     "@angular/http": "2.0.0-rc.4",
     "@angular/platform-browser": "2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/router": "3.0.0-beta.1",
-    "@angular/router-deprecated": "2.0.0-rc.2",
-    "@angular/upgrade": "2.0.0-rc.4",
-    "angular2-materialize": "^3.0.1",
+    "@angular/router": "3.0.0-beta.2",
+    "bootstrap": "^3.3.6",
     "core-js": "^2.4.0",
-    "hammerjs": "^2.0.8",
-    "jquery": "^3.0.0",
-    "materialize-css": "^0.97.6",
+    "ng2-bootstrap": "^1.0.17",
     "openlayers": "^3.17.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
+    "systemjs": "^0.19.31",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
+    "concurrently": "^2.0.0",
     "coveralls": "^2.11.9",
-    "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.15.0",
-    "imports-loader": "^0.6.5",
     "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
@@ -45,20 +42,12 @@
     "karma-jasmine": "^0.3.8",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.7.0",
-    "null-loader": "^0.1.1",
+    "lite-server": "^2.2.0",
     "phantomjs-prebuilt": "^2.1.7",
-    "raw-loader": "^0.5.1",
-    "rimraf": "^2.5.2",
-    "style-loader": "^0.13.1",
-    "ts-loader": "^0.8.1",
-    "tslint": "^3.12.1",
-    "tslint-loader": "^2.1.5",
+    "systemjs-builder": "^0.15.23",
     "typescript": "^1.8.10",
     "typings": "^1.0.4",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-merge": "^0.14.0"
+    "yargs": "^4.8.0"
   },
   "repository": {
     "type": "git",
