--- a/package.json
+++ b/package.json
@@ -3,37 +3,45 @@
   "version": "1.0.0",
   "description": "AngularJS Web Interface",
   "scripts": {
-    "start": "concurrently \"npm run  build:w\" \"npm run lite\"",
+    "start": "concurrently \"npm run tsc:w\" \"npm run lite\" ",
     "bundle": "node bundle.js",
     "bundle:prod": "node bundle.js --prod",
     "lite": "lite-server",
-    "build": "tsc",
-    "build:w": "tsc --watch",
-    "typings": "typings install moment --save",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
+    "typings": "typings",
     "test": "karma start && npm run coveralls",
     "postinstall": "typings install",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/router": "3.0.0-beta.2",
-    "bootstrap": "^3.3.6",
+    "@angular/common": "^2.0.0-rc.4",
+    "@angular/compiler": "^2.0.0-rc.4",
+    "@angular/core": "^2.0.0-rc.4",
+    "@angular/forms": "^0.2.0",
+    "@angular/http": "^2.0.0-rc.4",
+    "@angular/platform-browser": "^2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
+    "@angular/router": "^3.0.0-beta.2",
+    "@angular/upgrade": "^2.0.0-rc.4",
+    "angular2-in-memory-web-api": "0.0.14",
+    "angular2-materialize": "^3.0.1",
+    "angular2-universal": "^0.104.5",
+    "body-parser": "^1.15.2",
     "core-js": "^2.4.0",
-    "ng2-bootstrap": "^1.0.17",
-    "openlayers": "^3.17.0",
+    "cors": "^2.7.1",
+    "express": "^4.14.0",
+    "express-jwt": "^3.4.0",
+    "jquery": "^3.1.0",
+    "materialize-css": "^0.97.6",
+    "preboot": "^4.0.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "^0.19.31",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
-    "concurrently": "^2.0.0",
+    "concurrently": "^2.2.0",
     "coveralls": "^2.11.9",
     "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine-core": "^2.4.1",
@@ -42,11 +50,11 @@
     "karma-jasmine": "^0.3.8",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "lite-server": "^2.2.0",
+    "lite-server": "^2.2.2",
     "phantomjs-prebuilt": "^2.1.7",
     "systemjs-builder": "^0.15.23",
     "typescript": "^1.8.10",
-    "typings": "^1.0.4",
+    "typings": "^1.3.1",
     "yargs": "^4.8.0"
   },
   "repository": {
@@ -54,8 +62,8 @@
     "url": "git+https://github.com/Coeus2016/visualizer-web-interface.git"
   },
   "keywords": [
-    "grunt",
-    "angular",
+    "systemjs",
+    "angular2",
     "openlayers"
   ],
   "contributors": [
