--- a/package.json
+++ b/package.json
@@ -23,18 +23,10 @@
     "@angular/platform-browser": "^2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
     "@angular/router": "^3.0.0-beta.2",
-    "@angular/upgrade": "^2.0.0-rc.4",
-    "angular2-in-memory-web-api": "0.0.14",
     "angular2-materialize": "^3.0.1",
-    "angular2-universal": "^0.104.5",
-    "body-parser": "^1.15.2",
     "core-js": "^2.4.0",
-    "cors": "^2.7.1",
-    "express": "^4.14.0",
-    "express-jwt": "^3.4.0",
     "jquery": "^3.1.0",
     "materialize-css": "^0.97.6",
-    "preboot": "^4.0.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "^0.19.31",
@@ -50,6 +42,7 @@
     "karma-jasmine": "^0.3.8",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
+    "karma-systemjs": "^0.14.0",
     "lite-server": "^2.2.2",
     "phantomjs-prebuilt": "^2.1.7",
     "systemjs-builder": "^0.15.23",
