--- a/package.json
+++ b/package.json
@@ -23,18 +23,11 @@
     "@angular/platform-browser": "^2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
     "@angular/router": "^3.0.0-beta.2",
-    "@angular/upgrade": "^2.0.0-rc.4",
-    "angular2-in-memory-web-api": "0.0.14",
     "angular2-materialize": "^3.0.1",
-    "angular2-universal": "^0.104.5",
-    "body-parser": "^1.15.2",
     "core-js": "^2.4.0",
-    "cors": "^2.7.1",
-    "express": "^4.14.0",
-    "express-jwt": "^3.4.0",
     "jquery": "^3.1.0",
     "materialize-css": "^0.97.6",
-    "preboot": "^4.0.0",
+    "openlayers": "^3.17.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "^0.19.31",
