--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "body-parser": "^1.15.2",
     "core-js": "^2.4.0",
     "cors": "^2.7.1",
+    "devbridge-autocomplete": "^1.2.25",
     "express": "^4.14.0",
     "express-jwt": "^3.4.0",
     "jquery": "^3.1.0",
