--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
+    "karma-systemjs": "^0.14.0",
     "lite-server": "^2.2.2",
     "phantomjs-prebuilt": "^2.1.7",
     "systemjs-builder": "^0.15.23",
