--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express-jwt": "^3.4.0",
     "jquery": "^3.1.0",
     "materialize-css": "^0.97.6",
+    "openlayers": "^3.17.1",
     "preboot": "^4.0.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
