--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "description": "AngularJS Web Interface",
   "scripts": {
-    "start": "concurrently \"npm run tsc:w\" \"npm run lite\" ",
+    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\"",
     "bundle": "node bundle.js",
     "bundle:prod": "node bundle.js --prod",
     "lite": "lite-server",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "typings": "typings",
-    "test": "karma start && npm run coveralls",
+    "pretest": "npm run tsc",
+    "test": "karma start karma.conf.js && npm run coveralls",
     "postinstall": "typings install",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
@@ -39,13 +40,14 @@
     "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine-core": "^2.4.1",
     "karma": "^1.1.1",
+    "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-systemjs": "^0.14.0",
     "lite-server": "^2.2.2",
-    "phantomjs-prebuilt": "^2.1.7",
+    "phantomjs-prebuilt": "^2.1.8",
     "systemjs-builder": "^0.15.23",
     "typescript": "^1.8.10",
     "typings": "^1.3.1",
