--- a/package.json
+++ b/package.json
@@ -3,65 +3,36 @@
   "version": "1.0.0",
   "description": "AngularJS Web Interface",
   "scripts": {
-    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\"",
-    "bundle": "node bundle.js",
-    "bundle:prod": "node bundle.js --prod",
-    "lite": "lite-server",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "typings": "typings",
-    "pretest": "npm run tsc",
+    "postinstall": "bower install",
+    "prestart": "npm install",
+    "start": "http-server -a localhost -p 8000 -c-1 ./app",
+    "pretest": "npm install",
     "test": "karma start karma.conf.js && npm run coveralls",
-    "postinstall": "typings install",
-    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
-  },
-  "dependencies": {
-    "@angular/common": "2.0.0-rc.5",
-    "@angular/compiler": "2.0.0-rc.5",
-    "@angular/core": "2.0.0-rc.5",
-    "@angular/forms": "0.3.0",
-    "@angular/http": "2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.1",
-    "angular2-materialize": "^3.0.1",
-    "core-js": "^2.4.0",
-    "devbridge-autocomplete": "^1.2.25",
-    "jquery": "^3.1.0",
-    "materialize-css": "^0.97.6",
-    "openlayers": "^3.17.1",
-    "preboot": "^4.0.0",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.27",
-    "zone.js": "^0.6.12"
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+    "preupdate-webdriver": "npm install",
+    "update-webdriver": "webdriver-manager update",
+    "preprotractor": "npm run update-webdriver",
+    "protractor": "protractor e2e/protractor.conf.js",
+    "update-index-async": "node -e \"var fs=require('fs'),indexFile='app/index-async.html',loaderFile='app/bower_components/angular-loader/angular-loader.min.js',loaderText=fs.readFileSync(loaderFile,'utf-8').split(/sourceMappingURL=angular-loader.min.js.map/).join('sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map'),indexText=fs.readFileSync(indexFile,'utf-8').split(/\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/).join('//@@NG_LOADER_START@@\\n'+loaderText+'    //@@NG_LOADER_END@@');fs.writeFileSync(indexFile,indexText);\""
   },
   "devDependencies": {
-    "concurrently": "^2.2.0",
-    "coveralls": "^2.11.9",
-    "istanbul-instrumenter-loader": "^0.2.0",
+    "bower": "^1.7.9",
+    "coveralls": "^2.11.12",
+    "http-server": "^0.9.0",
     "jasmine-core": "^2.4.1",
-    "karma": "^1.1.1",
-    "karma-chrome-launcher": "^1.0.1",
-    "karma-coverage": "^1.0.0",
+    "karma": "^1.2.0",
+    "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-systemjs": "^0.14.0",
-    "lite-server": "^2.2.2",
-    "phantomjs-prebuilt": "^2.1.8",
-    "systemjs-builder": "^0.15.23",
-    "typescript": "^1.8.10",
-    "typings": "^1.3.1",
-    "yargs": "^4.8.0"
+    "karma-phantomjs-launcher": "^1.0.1",
+    "phantomjs-prebuilt": "^2.1.12",
+    "protractor": "^4.0.3"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Coeus2016/visualizer-web-interface.git"
   },
   "keywords": [
-    "systemjs",
-    "angular2",
+    "angularjs",
     "openlayers"
   ],
   "contributors": [
