--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-loader": "1.5.8",
     "angular-sanitize": "1.5.8",
     "openlayers": "https://github.com/openlayers/ol3/releases/download/v3.17.1/v3.17.1-dist.zip",
-    "angular-ui-router": "^0.3.1"
+    "angular-ui-router": "^0.3.1",
+    "leaflet.markercluster": "^0.5.0"
   },
   "devDependencies": {
     "angular-mocks": "1.5.8"
