--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-ui-router": "^0.3.1",
     "leaflet.markercluster": "^0.5.0",
     "leaflet.weather-markers": "Leaflet.weather-markers#^3.0.0",
-    "weather-icons": "^2.0.10"
+    "weather-icons": "^2.0.10",
+    "leaflet": "^0.7.7"
   },
   "devDependencies": {
     "angular-mocks": "1.5.8"
