--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "leaflet.markercluster": "^0.5.0",
     "leaflet.weather-markers": "Leaflet.weather-markers#^3.0.0",
     "weather-icons": "^2.0.10",
-    "leaflet": "^0.7.7"
+    "leaflet": "^0.7.7",
+    "socket.io": "^1.4.8"
   },
   "devDependencies": {
     "angular-mocks": "1.5.8"
