--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,9 @@
     "leaflet.weather-markers": "Leaflet.weather-markers#^3.0.0",
     "weather-icons": "^2.0.10",
     "leaflet": "^0.7.7",
-    "socket.io": "^1.4.8"
+    "socket.io": "^1.4.8",
+    "angular-jwt": "^0.1.5",
+    "a0-angular-storage": "^0.0.15"
   },
   "devDependencies": {
     "angular-mocks": "1.5.8"
