--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,9 @@
     "leaflet": "^0.7.7",
     "socket.io": "^1.4.8",
     "angular-jwt": "^0.1.5",
-    "a0-angular-storage": "^0.0.15"
+    "a0-angular-storage": "^0.0.15",
+    "angular-socket-io": "^0.7.0",
+    "socket.io-client": "^1.5.0"
   },
   "devDependencies": {
     "angular-mocks": "1.5.8"
