--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "angular-jwt": "^0.1.5",
     "a0-angular-storage": "^0.0.15",
     "angular-socket-io": "^0.7.0",
-    "socket.io-client": "^1.5.0"
+    "socket.io-client": "^1.5.0",
+    "angular-notification-icons": "^0.4.4"
   },
   "devDependencies": {
     "angular-mocks": "1.5.8"
